# jppype

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  install.json  jppype.json  pyproject.toml  setup.cfg  setup.py
example/: .gitignore  View2D.ipynb  domain.ipynb
jppype/: __init__.py  _frontend.py  _version.py  layer_base.py  layers_2d.py  mosaic.py  utils.py  vega.py  view2d.py  vscode_theming.py
jppype/labextension/: package.json
jppype/labextension/static/: 122.edfd1a65a79c19915c6c.js  158.cf2a9bfde1b5d0786a5b.js  171.2c5db410af9dbe2f47e5.js  196.1873dcaca8efd2fc1c2b.js  261.1a494909fdd419821b6d.js  282.d7d9a03bf1cc7454e25c.js  378.7826c97d098077b5d0ad.js  506.00d6a3d3581bcd2c4f08.js  550.85a969e991b8f2d09f31.js  568.419531d8c3941fea73ab.js  591.31683af0e9acd9a02b10.js  638.a5b4839e24e92fb40378.js  686.82ee787738c3ffc590f5.js  686.82ee787738c3ffc590f5.js.LICENSE.txt  846.d616be63f43d7c12c5c3.js  remoteEntry.5ad74e6dbc3124909c38.js  third-party-licenses.json
jppype/layers/: __init__.py  field_encoding.py  layer_base.py  layers_2d.py
jppype/nbextension/: extension.js  extension.js.LICENSE.txt  extension.js.map  index.js  index.js.map
jppype/utilities/: color.py  event.py  func.py  geometric.py  image.py
jppype/utils/: func.py  image.py  safe_import.py
ts-src/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
ts-src/css/: ImageViewerWidger.css  RulerAxis.css  View2D.css  widget.css
ts-src/src/: extension.ts  index.ts  labplugin.ts  widgets.ts
ts-src/src/ipywidgets/: JView2D.ts  jbasewidget.ts  serializers.ts
ts-src/src/react-components/: CursorOverlay.tsx  RectSelectionOverlay.tsx  RulerAxis.tsx  View2D.tsx  View2DRender.tsx
ts-src/src/react-components/View2DRender/: View2DRender.tsx  d3_layers.tsx  images_layers.tsx  layers_utils.ts
ts-src/src/react-widgets/: ImageViewer.tsx  View2D.tsx
ts-src/src/utils/: animator.ts  color.ts  event-listener.ts  lookup.ts  point.ts  size-context.ts  zoom-pan-handler.ts  zustand-utils.ts
