[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "jppype"
version = "0.2.0-a6"
description = "JupyterLab extension adding data visualisation widgets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Gabriel Lepetit-Aimon", email = "gabriel.lepetitaimon@gmail.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "JupyterLab",
    "Widgets",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
dependencies = [
    "ipykernel~=6.22.0",
    "ipywidgets~=8.0.5,<9",
    "numpy",
    "StrEnum",
    "webcolors",
]

[project.optional-dependencies]
examples = []
build = [
    "jupyterlab~=4.2",
    "build",
    "tbump"
]
dev = ["black", "ruff"]

[project.urls]
Homepage = " https://github.com/gabriel-lepetitaimon/jppype"
Source = "https://github.com/gabriel-lepetitaimon/jppype"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = [
    "jppype/nbextension/static",
    "jppype/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jppype/nbextension" = "share/jupyter/nbextensions/jppype"
"jppype/labextension" = "share/jupyter/labextensions/jppype"
"./install.json" = "share/jupyter/labextensions/jppype/install.json"
"./jppype.json" = "etc/jupyter/nbconfig/notebook.d/jppype.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jppype/nbextension/index.js",
    "jppype/labextension/package.json",
]
skip-if-exists = [
    "jppype/nbextension/index.js",
    "jppype/labextension/package.json",
]


[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
path = "./ts-src/"
source_dir = "./ts-src/"
npm = "jlpm"


[tool.tbump]
github_url = "https://github.com/gabriel-lepetitaimon/jppype/"
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}-{channel}{release}\"" },
    { src = "jppype/_version.py" },
    { src = "ts-src/package.json", version_template = "\"version\": \"{major}.{minor}.{patch}-{channel}{release}\"" },
]

[tool.tbump.version]
current = "0.2.0-a6"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<channel>a|b|rc|dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]