[metadata]
name = jppype
author = Gabriel Lepetit-Aimon
author_email=gabriel.lepetitaimon@gmail.com
version = attr: jppype._version.__version__
description = Custom Jupyter Widgets for ProtoPype.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gabriel-lepetitaimon/jppype
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    ipykernel~=6.22.0
    ipywidgets~=8.0.5,<9
    numpy~=1.23.5
    opencv-python-headless~=4.7
    webcolors~=1.13
